compiler/example/test-utils/invalid-type-name-datamodel/root.go
package root

import (
	"github.com/vmware-tanzu/graph-framework-for-microservices/compiler/example/test-utils/invalid-type-name-datamodel/config"
	"github.com/vmware-tanzu/graph-framework-for-microservices/nexus/nexus"
)

type Root struct {
	nexus.Node
	Config config.Config `nexus:"child"`
}
